// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components:checkup:ProgressBlock:ProgressBar matches the snapshot when format is desktop 1`] = `
<nav
  className="sc-bdVaJa gcHaYi"
  format="desktop"
>
  ProgressBar
</nav>
`;

exports[`components:checkup:ProgressBlock:ProgressBar matches the snapshot when format is mobile 1`] = `
<nav
  className="sc-bdVaJa ewVCTu"
  format="mobile"
>
  ProgressBar
</nav>
`;

exports[`components:checkup:ProgressBlock:ProgressBar matches the snapshot when format is tablet 1`] = `
<nav
  className="sc-bdVaJa inRAkP"
  format="tablet"
>
  ProgressBar
</nav>
`;
